fixed migration script
